# faceapi

./: .dockerignore  .env.dev.example  .env.example  .env.prod.example  .gitignore  404.html  DOCKER_SUPPORT.md  Dockerfile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.en.md  README.ja.md  README.md  README.zh-TW.md  deploy.sh  docker-compose.dev.gpu.yml  docker-compose.dev.yml  docker-compose.prod.gpu.yml  docker-compose.prod.yml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup_project.py  sitemap.xml
backend/: Dockerfile  Dockerfile-gpu  README.md  pyproject.toml  requirements.txt  requirements_doc.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py
backend/app/db/: __init__.py  init_milvus.py  init_sql.py
backend/app/face_rec/: FaceRecModel.py  StarNet.py  __init__.py  predict_face_demo.py
backend/app/models/: __init__.py  user.py
backend/app/routes/: __init__.py  admin.py  face.py  user.py
backend/app/schemas/: __init__.py  response.py  user.py
backend/app/services/: __init__.py  admin.py  face.py  user.py
backend/app/utils/: __init__.py  face_utils.py  jwt_utils.py  milvus_utils.py  pass_utils.py
backend/faceapi/: __cli__.py  __init__.py  main.py
backend/faceapi/core/: __init__.py  config.py
backend/faceapi/db/: __init__.py  init_account.py  init_milvus.py  init_sql.py
backend/faceapi/face_rec/: OnnxModel.py  StarNet.py  __init__.py  predict_face_demo.py
backend/faceapi/models/: user.py
backend/faceapi/routes/: __init__.py  user.py
backend/faceapi/schemas/: __init__.py
backend/faceapi/services/: admin.py  face.py  user.py
backend/faceapi/utils/: face_utils.py  jwt_utils.py  milvus_utils.py
deploy/: index.html
dev/: index.html
docs/en/: deploy.md  dev.md  index.md  install.md
docs/ja/: deploy.md  dev.md  index.md  install.md
docs/zh-TW/: deploy.md  dev.md  index.md  install.md
en/: index.html
en/deploy/: index.html
en/dev/: index.html
en/install/: index.html
frontend/: .dockerignore  .env.template  .gitignore  Dockerfile  Dockerfile_dev  Dockerfile_prod  download_models.js  download_models.ps1  download_models.sh  index.html  pnpm-lock.yaml  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: Login.vue  (+8 more)
install/: index.html
nginx/: nginx.conf
nginx/templates/: default.conf.template
search/: search_index.json
zh-TW/: index.html
zh-TW/deploy/: index.html
zh-TW/dev/: index.html
zh-TW/install/: index.html
(+7 files in other folders)
