[project]
name = "face-recognition-system"
version = "0.1.0"
description = "A face recognition system with FastAPI backend and Vue frontend"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
    "numpy>=1.21.0<2.0.0",
    "opencv-python>=4.8.0",
    "pillow>=9.0.0",
    "pymilvus>=2.3.0",
    "pydantic>=2.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tortoise-orm[asyncpg]",
    "seaborn",
    "tqdm",
    "timm",
    "pymilvus[milvus_lite]",
    "pydantic_settings",
    "passlib",
    "jwt",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]
